# sessions

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ASSESSMENT.md  AUDIT.md  AUTH_NOTES.md  AUTH_SPEC.md  BACKFILL_SPEC.md  CODEXFIX_NOTES.md  CODEX_CONTROLS.md  DEPLOY_SPEC.md  HOOK_NOTES.md  HOOK_SPEC.md  LICENSE  NOTES.md  README.md  README_SPEC.md  REMOTE_NOTES.md  REMOTE_SPEC.md  ROADMAP.md  SPEC.md  STATE.md  WAIT_NOTES.md  WAIT_SPEC.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feedback.yml
.github/workflows/: ci.yml  release.yml  (+1 more)
Formula/: pretty.rb  sessions.rb
docs/: ARCHITECTURE.md  CLI.md  CLOUD_VM.md  CODEBASE.md  CUTOVER.md  CUTOVER_AUDIT_2026-07-17.md  DEV.md  INSTALL.md  INTEGRATIONS.md  NATIVE_APP.md  NETWORK_SECURITY.md  RELEASE.md  RUNBOOKS.md  WHY.md
frontend/: CONNECT_NOTES.md  index.html  node_modules  package-lock.json  package.json  tsconfig.json  vite.config.ts
prettyd/: README.md  node_modules  package-lock.json  package.json
prettygo/: ARCHITECTURE.md  Makefile  go.mod  go.sum
release/: notes-v0.1.0.md  notes-v0.2.0.md  notes-v0.2.1.md  notes-v0.2.2.md  notes-v0.2.3.md  updater.pub
runtime/: ARCHITECTURE.md  go.mod
scripts/: build-app-runtime.sh  cutover.sh  install.sh  release-app.sh  render-updater-manifest.mjs  rollback.sh  ship.sh
site/: .somewhere.json  connect.html  docs.html  index.html  setup.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lifecycle.rs  main.rs
(+780 files in other folders)
