[package]
name = "sessions-app"
version = "0.2.0"
description = "Sessions native client and release package for the local Sessions runtime"
authors = ["Uzair Haq"]
license = "MIT"
repository = "https://github.com/somewhere-tech/sessions"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sessions_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json"] }
url = "2.5"
tauri-plugin-updater = { version = "2", default-features = false, features = ["native-tls", "zip"] }
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
